[gd_scene load_steps=4 format=3 uid="uid://bd1pndt5suk56"]

[ext_resource type="Script" path="res://boom.gd" id="1_8y3i8"]
[ext_resource type="AudioStream" uid="uid://dhm4d2a0lsx2o" path="res://bomba.wav" id="2_xbusv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_r5sdx"]
radius = 91.0879

[node name="Boom" type="Node2D"]
script = ExtResource("1_8y3i8")

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.545098, 0, 0, 1)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="SomBoom" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_xbusv")
volume_db = 24.0

[node name="Lifetime" type="Timer" parent="."]
process_callback = 0
wait_time = 0.3
one_shot = true
autostart = true

[node name="BlastRadius" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="BlastRadius"]
shape = SubResource("CircleShape2D_r5sdx")

[connection signal="timeout" from="Lifetime" to="." method="_on_lifetime_timeout"]
